# pumpman

./: Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
idls/: pump.json
scripts/: bc.py
sql/: coins.sql  pumpman_global.sql  pumpmen.sql  takeovers.sql  users.sql
src/: cli.rs  config.rs  emoji.rs  lib.rs  schema.rs  service.rs  sol.rs  utils.rs
src/api/: dex.rs  mod.rs  pump.rs  sol.rs
src/client/: mod.rs  sub.rs
src/client/sol/: pump.rs
src/context/: client.rs  db.rs  mod.rs  postgres.rs  redis.rs  task.rs  telegram.rs
src/model/: alert.rs  coin.rs  dex.rs  mod.rs  pump.rs  pumpman.rs  pumpman_global.rs  pumpman_job.rs  takeover.rs  user.rs
src/service/: comment.rs  mod.rs  processor.rs  pump.rs  pumpman.rs  takeover.rs
src/sol/: mod.rs  pump.rs  raydium.rs  utils.rs
src/telegram/: button.rs  keyboard.rs  mod.rs
src/telegram/pumpman/: callback.rs  command.rs  context.rs  message.rs  mod.rs  state.rs
src/telegram/takeover/: alert.rs  callback.rs  command.rs  context.rs  group.rs  markup.rs  message.rs  mod.rs  result.rs  state.rs
src/utils/: dex.rs  mod.rs
tests/: pump.rs
