[package]
name = "replika"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
anchor-lang = "0.30.1"
anyhow = "1.0.86"
async-graphql = "7.0.6"
async-lock = "3.4.0"
base64 = "0.22.1"
bigdecimal = "0.4.5"
borsh = "1.5.1"
clap = { version = "4.5.8", features = ["derive"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
futures-util = "0.3.30"
mpl-token-metadata = "4.1.2"
redis = { version = "0.25.4", features = ["json"]}
reqwest = { version = "0.11", features = ["json"]}
serde = "1.0.203"
serde_json = "1.0.120"
solana-account-decoder = "2.0.1"
solana-client = { version = "2.0.1", default-features = false }
solana-sdk = { version = "2.0.1", default-features = false }
solana-transaction-status = "2.0.1"
teloxide = { version = "0.12.2", features = ["redis-storage", "cache-me", "throttle", "macros" ] }
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
